[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/other/Hurtbox.gd" type="Script" id=1]

[node name="hurtbox" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource( 1 )

[node name="hutbox_shape" type="CollisionShape2D" parent="."]
modulate = Color( 0.478431, 0.980392, 0.196078, 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="invincible_ended" from="." to="." method="_on_hurtbox_invincible_ended"]
[connection signal="invincible_started" from="." to="." method="_on_hurtbox_invincible_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
